[package]
name = "tmp-postgres"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
description = """
  Easily start a temporary PostgreSQL server for testing or exploration
"""
repository = "https://github.com/tstat/tmp-postgres"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process-muxer = "0.1.0"
clap = { version = "=4.4.18", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.10.4"
regex = "1.9.3"

[[bin]]
name = "tmp-postgres"
